[tool.poetry]
name = "stick-me"
version = "0.1.0"
description = "A Telegram bot which helps to create a sticker set with your beloved stickers"
authors = ["Evgenii Korobkov <eug.korobkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

httpx = "==0.27.2"
python-telegram-bot = "==21.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "==1.11.2"
pylint = "==3.3.1"
ruff = "==0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
